# wzm

./: Cargo.toml  justfile  rustfmt.toml
crates/wzm/: Cargo.toml
crates/wzm-comp/: Cargo.toml
crates/wzm-comp/src/: action.rs  cursor.rs  drawing.rs  focus.rs  input.rs  input_handler.rs  lib.rs  main.rs  render.rs  renderer.rs  state.rs  winit.rs  x11.rs
crates/wzm-comp/src/backend/: mod.rs  udev.rs  winit.rs
crates/wzm-comp/src/decoration/: borders.rs  mod.rs
crates/wzm-comp/src/grabs/: move_grab.rs  resize_grab.rs
crates/wzm-comp/src/handlers/: activation.rs  compositor.rs  decoration.rs  dmabuf.rs  drm.rs  layer_shell.rs  mod.rs  xdg_shell.rs
crates/wzm-comp/src/shell/: container.rs  drawable.rs  element.rs  grabs.rs  leaf.rs  mod.rs  node.rs  nodemap.rs  output.rs  resize.rs  siblings.rs  ssd.rs  tree.rs  windows.rs  workspace.rs  x11.rs  xdg.rs
crates/wzm-comp/src/shell2/: leaf.rs  mod.rs  node.rs  resize.rs  siblings.rs  tree.rs
crates/wzm-config/: Cargo.toml
crates/wzm-config/src/: action.rs  keybinding.rs  lib.rs
crates/wzm/src/: main.rs
docs/notes/: book.toml
docs/notes/src/: SUMMARY.md  chapter_1.md  udev.md
example/: config.example.ron
