[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
wzm-config = { path = "crates/wzm-config" }
wzm-comp = { path = "crates/wzm-comp" }

[workspace.dependencies.smithay]
default-features = false
git = "https://github.com/stratawm/smithay"
version = "0.3.0"
rev = "fb44b24"
features = [
    "desktop",
    "wayland_frontend",
    "backend_winit",
    "backend_egl",
    "backend_drm",
    "backend_gbm",
    "use_system_lib",
    "renderer_glow",
    "renderer_multi",
    "wayland-protocols"
]
