[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
wzm-config = { path = "crates/wzm-config" }
wzm-comp = { path = "crates/wzm-comp" }

[workspace.dependencies.smithay-drm-extras]
git = "https://github.com/Smithay/smithay"
version = "0.1.0"
rev = "0afc33267ed17e516ec8db118fbb137c8add9c09"

[workspace.dependencies.smithay]
default-features = false
git = "https://github.com/Smithay/smithay"
version = "0.3.0"
rev = "0afc33267ed17e516ec8db118fbb137c8add9c09"
features = [
    "desktop",
    "wayland_frontend",
    "backend_winit",
    "backend_egl",
    "backend_drm",
    "backend_gbm",
    "use_system_lib",
    "renderer_glow",
    "renderer_multi",
    "wayland-protocols",
    "libseat",
    "backend_session_libseat",
    "backend_libinput",
]
