[package]
name = "wzm-config"
version = "0.1.0"
edition = "2021"

[dependencies]
smithay.workspace = true
xkbcommon = "0.7.0"
dirs = "5.0.1"
config = "0.14.0"
serde = { version = "1.0.202", features = ["derive"] }
ron = "0.8.1"
anyhow = "1.0.86"
log = "0.4.21"

[dev-dependencies]
speculoos = "0.11.0"
indoc = "2.0.5"